fix bug with registration & fix handleselect at inputselect on mobile, styles of wrappermodalbottom, inputtext

--- a/src/shared/ui/Input/ui/Text/ui/_InputText.module.scss
+++ b/src/shared/ui/Input/ui/Text/ui/_InputText.module.scss
@@ -60,7 +60,7 @@
 
 	&:hover {
 		.input {
-			background-color: var(--gray-4) !important;
+			background-color: var(--gray-4);
 		}
 	}
 
